--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,62 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Material 3 Light Theme Colors - Generated from Material Theme Builder -->
-    <color name="md_theme_primary">#6750A4</color>
+    <!-- Material 3 Light Theme Colors - Glass-Material Hybrid palette -->
+    <color name="md_theme_primary">#00C853</color> <!-- vivid green -->
     <color name="md_theme_onPrimary">#FFFFFF</color>
-    <color name="md_theme_primaryContainer">#EADDFF</color>
-    <color name="md_theme_onPrimaryContainer">#21005D</color>
-    <color name="md_theme_secondary">#625B71</color>
+    <color name="md_theme_primaryContainer">#B8F7C9</color>
+    <color name="md_theme_onPrimaryContainer">#00220A</color>
+    <color name="md_theme_secondary">#607D8B</color> <!-- blue-grey accent -->
     <color name="md_theme_onSecondary">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer">#E8DEF8</color>
-    <color name="md_theme_onSecondaryContainer">#1D192B</color>
-    <color name="md_theme_tertiary">#7D5260</color>
-    <color name="md_theme_onTertiary">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer">#FFD8E4</color>
-    <color name="md_theme_onTertiaryContainer">#31111D</color>
+    <color name="md_theme_secondaryContainer">#DCECEF</color>
+    <color name="md_theme_onSecondaryContainer">#0F172A</color>
+    <color name="md_theme_tertiary">#8FBFE0</color>
+    <color name="md_theme_onTertiary">#0F172A</color>
+    <color name="md_theme_tertiaryContainer">#EAF6FF</color>
+    <color name="md_theme_onTertiaryContainer">#052033</color>
     <color name="md_theme_error">#BA1A1A</color>
     <color name="md_theme_onError">#FFFFFF</color>
     <color name="md_theme_errorContainer">#FFDAD6</color>
     <color name="md_theme_onErrorContainer">#410002</color>
-    <color name="md_theme_background">#FFFBFE</color>
-    <color name="md_theme_onBackground">#1C1B1F</color>
-    <color name="md_theme_surface">#FFFBFE</color>
-    <color name="md_theme_onSurface">#1C1B1F</color>
-    <color name="md_theme_surfaceVariant">#E7E0EC</color>
-    <color name="md_theme_onSurfaceVariant">#49454F</color>
-    <color name="md_theme_outline">#79747E</color>
-    <color name="md_theme_inverseSurface">#313033</color>
-    <color name="md_theme_inverseOnSurface">#F4EFF4</color>
-    <color name="md_theme_inversePrimary">#D0BCFF</color>
-    <color name="md_theme_outlineVariant">#CAC4D0</color>
+    <color name="md_theme_background">#0F172A</color> <!-- deep surface -->
+    <color name="md_theme_onBackground">#E6F0F6</color>
+    <color name="md_theme_surface">#0F172A</color>
+    <color name="md_theme_onSurface">#FFFFFF</color>
+    <color name="md_theme_surfaceVariant">#0B2233</color>
+    <color name="md_theme_onSurfaceVariant">#90A4AE</color>
+    <color name="md_theme_outline">#90A4AE</color>
+    <color name="md_theme_inverseSurface">#E6E1E6</color>
+    <color name="md_theme_inverseOnSurface">#313033</color>
+    <color name="md_theme_inversePrimary">#B8F7C9</color>
+    <color name="md_theme_outlineVariant">#26323B</color>
 
-    <!-- Material 3 Dark Theme Colors - Generated from Material Theme Builder -->
-    <color name="md_theme_dark_primary">#D0BCFF</color>
-    <color name="md_theme_dark_onPrimary">#381E72</color>
-    <color name="md_theme_dark_primaryContainer">#4F378B</color>
-    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
-    <color name="md_theme_dark_secondary">#CCC2DC</color>
-    <color name="md_theme_dark_onSecondary">#332D41</color>
-    <color name="md_theme_dark_secondaryContainer">#4A4458</color>
-    <color name="md_theme_dark_onSecondaryContainer">#E8DEF8</color>
-    <color name="md_theme_dark_tertiary">#EFB8C8</color>
-    <color name="md_theme_dark_onTertiary">#492532</color>
-    <color name="md_theme_dark_tertiaryContainer">#633B48</color>
-    <color name="md_theme_dark_onTertiaryContainer">#FFD8E4</color>
+    <!-- Material 3 Dark Theme Colors - Glass-Material Hybrid -->
+    <color name="md_theme_dark_primary">#B8F7C9</color>
+    <color name="md_theme_dark_onPrimary">#082105</color>
+    <color name="md_theme_dark_primaryContainer">#164B22</color>
+    <color name="md_theme_dark_onPrimaryContainer">#B8F7C9</color>
+    <color name="md_theme_dark_secondary">#90A4AE</color>
+    <color name="md_theme_dark_onSecondary">#0F172A</color>
+    <color name="md_theme_dark_secondaryContainer">#26323B</color>
+    <color name="md_theme_dark_onSecondaryContainer">#DCECEF</color>
+    <color name="md_theme_dark_tertiary">#BEE6FF</color>
+    <color name="md_theme_dark_onTertiary">#052033</color>
+    <color name="md_theme_dark_tertiaryContainer">#0B3B55</color>
+    <color name="md_theme_dark_onTertiaryContainer">#EAF6FF</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1C1B1F</color>
-    <color name="md_theme_dark_onBackground">#E6E1E6</color>
-    <color name="md_theme_dark_surface">#1C1B1F</color>
-    <color name="md_theme_dark_onSurface">#E6E1E6</color>
-    <color name="md_theme_dark_surfaceVariant">#49454F</color>
-    <color name="md_theme_dark_onSurfaceVariant">#CCC4D0</color>
-    <color name="md_theme_dark_outline">#938F99</color>
+    <color name="md_theme_dark_background">#0F172A</color>
+    <color name="md_theme_dark_onBackground">#E6F0F6</color>
+    <color name="md_theme_dark_surface">#0F172A</color>
+    <color name="md_theme_dark_onSurface">#E6F0F6</color>
+    <color name="md_theme_dark_surfaceVariant">#112233</color>
+    <color name="md_theme_dark_onSurfaceVariant">#90A4AE</color>
+    <color name="md_theme_dark_outline">#90A4AE</color>
     <color name="md_theme_dark_inverseSurface">#E6E1E6</color>
     <color name="md_theme_dark_inverseOnSurface">#313033</color>
-    <color name="md_theme_dark_inversePrimary">#6750A4</color>
-    <color name="md_theme_dark_outlineVariant">#49454F</color>
+    <color name="md_theme_dark_inversePrimary">#00C853</color>
+    <color name="md_theme_dark_outlineVariant">#1B2A33</color>
 
     <!-- Basic colors (if still used directly) -->
     <color name="purple_200">#FFBB86FC</color>
