--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Material 3 Light Theme Colors - Glass-Material Hybrid palette -->
-    <color name="md_theme_primary">#00C853</color> <!-- vivid green -->
+    <!-- Material 3 Light Theme Colors - Google Blue primary + surface tones -->
+    <color name="md_theme_primary">#1A73E8</color> <!-- Google Blue -->
     <color name="md_theme_onPrimary">#FFFFFF</color>
-    <color name="md_theme_primaryContainer">#B8F7C9</color>
-    <color name="md_theme_onPrimaryContainer">#00220A</color>
-    <color name="md_theme_secondary">#607D8B</color> <!-- blue-grey accent -->
+    <color name="md_theme_primaryContainer">#DCEEFF</color>
+    <color name="md_theme_onPrimaryContainer">#00264F</color>
+    <color name="md_theme_secondary">#607D8B</color> <!-- blue-grey accent for balance -->
     <color name="md_theme_onSecondary">#FFFFFF</color>
-    <color name="md_theme_secondaryContainer">#DCECEF</color>
+    <color name="md_theme_secondaryContainer">#EAF2F7</color>
     <color name="md_theme_onSecondaryContainer">#0F172A</color>
     <color name="md_theme_tertiary">#8FBFE0</color>
     <color name="md_theme_onTertiary">#0F172A</color>
     <color name="md_theme_tertiaryContainer">#EAF6FF</color>
     <color name="md_theme_onTertiaryContainer">#052033</color>
-    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_error">#B00020</color>
     <color name="md_theme_onError">#FFFFFF</color>
     <color name="md_theme_errorContainer">#FFDAD6</color>
     <color name="md_theme_onErrorContainer">#410002</color>
-    <color name="md_theme_background">#0F172A</color> <!-- deep surface -->
-    <color name="md_theme_onBackground">#E6F0F6</color>
-    <color name="md_theme_surface">#0F172A</color>
-    <color name="md_theme_onSurface">#FFFFFF</color>
-    <color name="md_theme_surfaceVariant">#0B2233</color>
+    <color name="md_theme_background">#FFFFFF</color> <!-- light surface by default -->
+    <color name="md_theme_onBackground">#0F172A</color>
+    <color name="md_theme_surface">#FFFFFF</color>
+    <color name="md_theme_onSurface">#0F172A</color>
+    <color name="md_theme_surfaceVariant">#F1F6FB</color>
     <color name="md_theme_onSurfaceVariant">#90A4AE</color>
-    <color name="md_theme_outline">#90A4AE</color>
-    <color name="md_theme_inverseSurface">#E6E1E6</color>
-    <color name="md_theme_inverseOnSurface">#313033</color>
-    <color name="md_theme_inversePrimary">#B8F7C9</color>
-    <color name="md_theme_outlineVariant">#26323B</color>
+    <color name="md_theme_outline">#E0E6EB</color>
+    <color name="md_theme_inverseSurface">#0F172A</color>
+    <color name="md_theme_inverseOnSurface">#E6F0F6</color>
+    <color name="md_theme_inversePrimary">#1659B6</color>
+    <color name="md_theme_outlineVariant">#CDD8E5</color>
 
-    <!-- Material 3 Dark Theme Colors - Glass-Material Hybrid -->
-    <color name="md_theme_dark_primary">#B8F7C9</color>
-    <color name="md_theme_dark_onPrimary">#082105</color>
-    <color name="md_theme_dark_primaryContainer">#164B22</color>
-    <color name="md_theme_dark_onPrimaryContainer">#B8F7C9</color>
+    <!-- Material 3 Dark Theme Colors - Google Blue adapted -->
+    <color name="md_theme_dark_primary">#DCEEFF</color>
+    <color name="md_theme_dark_onPrimary">#00264F</color>
+    <color name="md_theme_dark_primaryContainer">#123A6E</color>
+    <color name="md_theme_dark_onPrimaryContainer">#DCEEFF</color>
     <color name="md_theme_dark_secondary">#90A4AE</color>
     <color name="md_theme_dark_onSecondary">#0F172A</color>
     <color name="md_theme_dark_secondaryContainer">#26323B</color>
@@ -55,7 +55,7 @@
     <color name="md_theme_dark_outline">#90A4AE</color>
     <color name="md_theme_dark_inverseSurface">#E6E1E6</color>
     <color name="md_theme_dark_inverseOnSurface">#313033</color>
-    <color name="md_theme_dark_inversePrimary">#00C853</color>
+    <color name="md_theme_dark_inversePrimary">#1659B6</color>
     <color name="md_theme_dark_outlineVariant">#1B2A33</color>
 
     <!-- Basic colors (if still used directly) -->
