--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,23 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_theme_background"
+    android:background="?attr/colorSurface"
     android:fitsSystemWindows="true"
-    tools:context=".DashboardActivity">
+    tools:context=".DashBoardActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.AegisPass.AppBarOverlay">
+        android:background="@android:color/transparent"
+        android:fitsSystemWindows="true"
+        app:elevation="0dp">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.AegisPass.PopupOverlay"
-            app:titleTextColor="?attr/colorOnPrimary"
+            android:layout_height="wrap_content"
+            android:minHeight="64dp"
+            android:background="@drawable/bg_toolbar_integrated"
+            app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+            app:titleTextColor="?attr/colorOnSurface"
+            app:title="AegisPass"
             app:menu="@menu/menu_dashboard" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -30,37 +34,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:padding="8dp"
-        android:scrollbars="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:paddingHorizontal="16dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="88dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/item_password_entry" />
 
-    <TextView
+    <LinearLayout
         android:id="@+id/noPasswordsMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No passwords saved yet.\nClick '+' to add one."
-        android:textAppearance="?attr/textAppearanceHeadlineSmall"
-        android:textColor="?attr/colorOnSurfaceVariant"
-        android:textAlignment="center"
+        android:orientation="vertical"
+        android:gravity="center"
         android:visibility="gone"
-        app:layout_anchor="@id/passwordRecyclerView"
-        app:layout_anchorGravity="center" />
+        android:layout_gravity="center">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/ic_lock_open_24"
+            app:tint="?attr/colorOutlineVariant" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="No passwords saved yet.\nClick '+' to add one."
+            android:textAppearance="?attr/textAppearanceBodyLarge"
+            android:textColor="?attr/colorOnSurfaceVariant"
+            android:textAlignment="center" />
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fabAddPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:contentDescription="Add new password"
-        app:srcCompat="@drawable/ic_add_24"
-        app:tint="?attr/colorOnPrimary"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="24dp"
+        android:text="Add"
+        app:icon="@drawable/ic_add_24"
+        app:iconTint="?attr/colorOnPrimary"
+        android:textColor="?attr/colorOnPrimary"
         app:backgroundTint="?attr/colorPrimary"
-        app:layout_anchor="@id/passwordRecyclerView"
-        app:layout_anchorGravity="bottom|end" />
+        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.MediumComponent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
