--- a/app/src/main/res/values/shapes.xml
+++ b/app/src/main/res/values/shapes.xml
@@ -2,14 +2,22 @@
 <resources>
     <!-- Corner radius styles for components -->
     <style name="ShapeRoundedLarge" parent="ShapeAppearance.Material3.LargeComponent">
-        <item name="cornerSize">32dp</item>
+        <item name="cornerSize">28dp</item>
     </style>
 
     <style name="ShapeRoundedMedium" parent="ShapeAppearance.Material3.MediumComponent">
-        <item name="cornerSize">24dp</item>
+        <item name="cornerSize">28dp</item>
     </style>
 
     <style name="ShapeRoundedSmall" parent="ShapeAppearance.Material3.SmallComponent">
         <item name="cornerSize">16dp</item>
+    </style>
+
+    <style name="ShapeToolbarBottomRounded24" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeTopRight">0dp</item>
+        <item name="cornerSizeBottomLeft">24dp</item>
+        <item name="cornerSizeBottomRight">24dp</item>
     </style>
 </resources>
